Navbar Collapse button fix

--- a/src/index.css
+++ b/src/index.css
@@ -134,3 +134,11 @@
   display: flex;
   justify-content: center;
 }
+@media only screen and (max-width: 768px){
+  .MLH{
+    max-width: fit-content;
+  }
+}
+
+
+
